# rememberMe

./: .gitignore  README.md  app.py  populate_mock_data.py  pyproject.toml  run_v1.py
pages/: 1_Caregiver_Dashboard.py  2_Patient_View.py  3_Admin_Tools.py  4_Who_Is_This.py  5_Live_Recording.py
src/: __init__.py  audio_recorder.py  background_scheduler.py  caregiver_chatbot.py  database.py  livekit_client.py  patient_assistant.py  recap_generator.py  schemas.py  smart_reminder.py  summarizer.py  text_to_speech.py  token_server.py  transcriber.py
